# msg2phone_project

./: .gitignore  README.md  pyproject.toml
msg2phone/: __init__.py  cli.py  exit_handler.py  info.py
